[gd_scene load_steps=23 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/shardsofthepasttitlescreengraphics.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/titlescreen/sotp_quit_pressed.png" type="Texture" id=3]
[ext_resource path="res://Placeholder Textures for Shards of the Past/titlescreen/sotp_achievements_pressed.png" type="Texture" id=4]
[ext_resource path="res://CRTShader.shader" type="Shader" id=5]
[ext_resource path="res://Placeholder Textures for Shards of the Past/CRTFrame.png" type="Texture" id=6]
[ext_resource path="res://Placeholder Textures for Shards of the Past/white.png" type="Texture" id=7]
[ext_resource path="res://Placeholder Textures for Shards of the Past/titlescreen/sotp_settings_pressed.png" type="Texture" id=8]
[ext_resource path="res://Placeholder Textures for Shards of the Past/titlescreen/sotp_quit.png" type="Texture" id=9]
[ext_resource path="res://Placeholder Textures for Shards of the Past/titlescreen/sotp_play_pressed.png" type="Texture" id=10]
[ext_resource path="res://Placeholder Textures for Shards of the Past/titlescreen/sotp_settings.png" type="Texture" id=11]
[ext_resource path="res://Placeholder Textures for Shards of the Past/titlescreen/sotp_achievements.png" type="Texture" id=12]
[ext_resource path="res://Placeholder Textures for Shards of the Past/titlescreen/sotp_play.png" type="Texture" id=13]
[ext_resource path="res://import_error_en.png" type="Texture" id=14]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float BarrelPower = 1.1;

vec2 distort(vec2 p) 
{

	float angle = p.y / p.x;
	float theta = atan(p.y,p.x);
	float radius = pow(length(p), BarrelPower);
	
	p.x = radius * cos(theta);
	p.y = radius * sin(theta);
	
	return 0.5 * (p + vec2(1.0,1.0));
}
void fragment()
{
	
vec2 xy = SCREEN_UV * 2.0;
xy.x -= 1.0;
xy.y -= 1.0;

float d = length(xy);
if(d < 1.5){
	xy = distort(xy);
}
else{
	xy = SCREEN_UV;
}
COLOR = texture(SCREEN_TEXTURE,xy);
}



"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/BarrelPower = 1.1

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float color_bleeding = 0.9;
uniform float bleeding_range = 2;
uniform float screen_width = 1024;
void fragment()
{
	float pixel_size = 1.0/screen_width*bleeding_range;
	vec4 color_left = texture(SCREEN_TEXTURE,SCREEN_UV - vec2(pixel_size, 0));
	vec4 current_color = texture(SCREEN_TEXTURE,SCREEN_UV);
	current_color = current_color*vec4(color_bleeding,0.5,0.25,1);
	color_left = color_left*vec4(0.25,0.5,color_bleeding,1);
	COLOR.rgba = (current_color + color_left);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/color_bleeding = 0.9
shader_param/bleeding_range = 2.0
shader_param/screen_width = 1024.0

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float lines_distance = 4.0;
uniform float pixel_size = 2.0;
uniform float size_screen = 600;
uniform float scanline_alpha = 0.9;
uniform float lines_velocity = 30.0;

void fragment()
{
	float line_row = floor((SCREEN_UV.y * size_screen/pixel_size) + mod(TIME*lines_velocity, lines_distance));

	float n = 1.0 - ceil((mod(line_row,lines_distance)/lines_distance));

vec4 c = texture(SCREEN_TEXTURE,SCREEN_UV);
c = c - n*c*(1.0 - scanline_alpha);
c.a = 1.0;
COLOR = c;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/lines_distance = 4.0
shader_param/pixel_size = 2.0
shader_param/size_screen = 600.0
shader_param/scanline_alpha = 0.9
shader_param/lines_velocity = 30.0

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 5 )
shader_param/BarrelPower = 1.05

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 5 )
shader_param/BarrelPower = 1.1

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160, 90 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_left = -158.533
margin_top = -91.3579
margin_right = -118.533
margin_bottom = -51.3579
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shaders" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Curvature" type="TextureRect" parent="Control/Shaders"]
visible = false
material = SubResource( 2 )
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorBleeding" type="TextureRect" parent="Control/Shaders"]
visible = false
material = SubResource( 4 )
margin_left = 146.533
margin_top = 63.3579
margin_right = 490.533
margin_bottom = 219.358
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScanLine" type="TextureRect" parent="Control/Shaders"]
material = SubResource( 6 )
margin_left = 158.533
margin_top = 92.3579
margin_right = 478.533
margin_bottom = 271.358
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CRT" type="TextureRect" parent="Control/Shaders"]
material = SubResource( 7 )
margin_left = 158.533
margin_top = 91.3579
margin_right = 478.533
margin_bottom = 271.358
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CRTFrame" type="TextureRect" parent="Control"]
margin_left = 161.0
margin_top = 91.0
margin_right = 495.0
margin_bottom = 335.0
rect_scale = Vector2( 0.946396, 0.738916 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
material = SubResource( 8 )
anchor_left = -0.00101099
anchor_right = 0.998989
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 44.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
use_parent_material = true
margin_left = 96.0
margin_top = 71.0
margin_right = 224.0
margin_bottom = 163.0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 10 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 128.0
margin_bottom = 44.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )

[node name="TextureButton6" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 128.0
margin_bottom = 68.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 4 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 128.0
margin_bottom = 92.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 160, 90 )
texture = ExtResource( 14 )
offset = Vector2( 0, 0.5 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TextureButton6" to="." method="_on_TextureButton6_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
